estilizando com css

--- a/index.html
+++ b/index.html
@@ -3,22 +3,23 @@
     <head>
         <meta charset="utf-8">
         <title>João Paulo Dantas</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
-            <h1>João Paulo Dantas Bernardo</h1>
+            <h1 id="title">João Paulo Dantas Bernardo</h1>
             <img src="eu.png" alt="Foto do desenvolvedor">
         </header>
         <section>
             <header>
-                <h2>Posts</h2>
+                <h2 class="subtitle">Posts</h2>
                 <img src="dev.png" alt="Ilustração de um desenvolvedor trabalhando">
             </header>
-            <article>
+            <article class="post_">
                 <header>
-                    <h3>Post #1</h3>
+                    <h3 class="post_title">Post #1</h3>
                 </header>
-                <p>
+                <p class="text">
                     Satisfação meus caros! Meu nome é <a href="https://www.linkedin.com/in/joao-paulo-dantas-bernardo/"
                     target="_blank">João Paulo</a> 
                     Sou desenvolvedor fullstack e estou aprimorando meus conhecimentos no front, 
@@ -29,7 +30,19 @@
                 </p>
             </article>
         </section>
-        <footer></footer>
+        <footer>
+            <ul>
+                <li>
+                    <a href="mailto:joaopaulodantasbernardo@gmail.com">joaopaulodantasbernardo@gmail.com</a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/joao-paulo-dantas-bernardo/"target="_blank">Linkedin</a>
+                </li>
+                <li>
+                    <a href="https://github.com/joao14p"target="_blank">GitHub</a>
+                </li>
+            </ul>
+        </footer>
     </body>
 
 
