Estilizando com CSS

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <header>
             <h1 id="title">João Paulo Dantas Bernardo</h1>
-            <img src="eu.png" alt="Foto do desenvolvedor">
+            <img src="eu.png" alt="Foto do desenvolvedor" class="photo">
         </header>
         <section>
             <header>
@@ -30,7 +30,7 @@
             </article>
         </section>
         <footer>
-            <ul>
+            <ul class="list">
                 <li>
                     <a href="mailto:joaopaulodantasbernardo@gmail.com">joaopaulodantasbernardo@gmail.com</a>
                 </li>
