Css criando site pessoal

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div class="img_fundo">
         <header>
             <h1 id="title">João Paulo Dantas Bernardo</h1>
             <img src="eu.png" alt="Foto do desenvolvedor" class="photo">
@@ -42,6 +43,7 @@
                 </li>
             </ul>
         </footer>
+        </div>
     </body>
 
 
