atualização de estilos

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="img_fundo">
         <header>
             <h1 id="title">João Paulo Dantas Bernardo</h1>
             <img src="eu.png" alt="Foto do desenvolvedor" class="photo">
@@ -26,7 +25,9 @@
                     usando Html 5, Css 3 e Java Script. Esse será um site para realização das tarefas da plataforma DIO, 
                     que forneçe algumas opções de bootcamps para desenvolvedores que estão iniciando a carreira, 
                     desde já fica o meu agradecimento a toda equipe da DIO! Caso queira entrar em contato pode me 
-                    enviar um <a href="mailto:joaopaulodantasbernardo@gmail.com">e-mail...</a>
+                    enviar um <a href="mailto:joaopaulodantasbernardo@gmail.com">e-mail, vou continuar me dedicando e progredindo diariamente 
+                    e com certeza irei alcançar minhas metas.
+                    </a>
                 </p>
             </article>
         </section>
@@ -43,7 +44,6 @@
                 </li>
             </ul>
         </footer>
-        </div>
     </body>
 
 
